<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
    schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>serial_communication_channels</name>

  <version>0.0.0</version>

  <description>
    The serial_communication_channels package for communication between PCs and
    Arduino based on the channels communication library developed by Prof. Dr.
    Paulo G. Costa.
  </description>



  <maintainer email="sousa.ricardob@outlook.com">Ricardo B. Sousa</maintainer>
  <maintainer email="alessandro.vigo22@gmail.com">Omnicar</maintainer>

  <author email="amoreira@fe.up.pt">António Paulo Moreira</author>
  <author email="claudia.d.rocha@inesctec.pt">Cláudia Daniela Rocha</author>
  <author email="heber.m.sobreira@inesctec.pt">Héber Miguel Sobreira</author>
  <author email="joao.g.martins@inesctec.pt">João G. Martins</author>
  <author email="up201806431@edu.fe.up.pt">João Pedro Costa</author>
  <author email="joaotomasmfgp@hotmail.com">João Tomás Padrão</author>
  <author email="jose.m.sarmento@inesctec.pt">José Maria Sarmento</author>
  <author email="up201806263@edu.fe.up.pt">José Pedro Carvalho</author>
  <author email="maria.s.lopes@inesctec.pt">Maria S. Lopes</author>
  <author email="paco@fe.up.pt">Paulo G. Costa</author>
  <author email="sousa.ricardob@outlook.com">Ricardo B. Sousa</author>




  <license>GNU General Public License version 3</license>





  <buildtool_depend>ament_cmake</buildtool_depend>



  <depend condition="$ROS_VERSION == 1">roscpp</depend>





  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
